fix: z-index, better positioning

--- a/src/styles/organisms/_organisms.digi-pattern.scss
+++ b/src/styles/organisms/_organisms.digi-pattern.scss
@@ -9,14 +9,14 @@ $digi-pattern-border-offset-x2: 2 * $digi-pattern-border-offset;
 
 .o-digi-pattern {
   position: relative;
-  z-index: 1;
+  z-index: layer('auto');
 
   &__behind {
-    z-index: -1;
+    z-index: layer('cellar');
   }
 
   &__front {
-    z-index: 1;
+    z-index: layer('base');
   }
 
   &__title,
@@ -60,7 +60,8 @@ $digi-pattern-border-offset-x2: 2 * $digi-pattern-border-offset;
 
   @include at($screen-md) {
     bottom: auto;
-    height: 10rem;
+    height: 125%;
+    max-height: 10rem;
     max-width: 10rem;
     top: 100%;
   }
@@ -83,15 +84,17 @@ $digi-pattern-border-offset-x2: 2 * $digi-pattern-border-offset;
     content: '';
     height: 12rem;
     margin-top: $digi-pattern-border-width * -1;
+    max-height: 200%;
     right: 100%;
     width: calc(200% + #{$digi-pattern-border-offset-x2});
 
     @include at($screen-md) {
       bottom: -1 * $digi-pattern-border-width;
-      height: 20rem;
+      height: calc(190% + #{$digi-pattern-border-offset-x2});
       left: 100%;
       margin-left: calc(6rem - #{$digi-pattern-border-width});
       margin-right: 0;
+      max-height: 20rem;
       max-width: 20rem;
       right: auto;
       width: 20vw;
@@ -103,6 +106,12 @@ $digi-pattern-border-offset-x2: 2 * $digi-pattern-border-offset;
   .o-digi-pattern__shapes {
     height: 150%;
     top: 100%;
+
+    @include at($screen-md) {
+      max-height: unset;
+      max-width: unset;
+      width: 33%;
+    }
 
     &::before {
       display: block;
@@ -122,7 +131,6 @@ $digi-pattern-border-offset-x2: 2 * $digi-pattern-border-offset;
       content: '';
       height: 75%;
       margin-right: $digi-pattern-border-width * -1;
-      max-height: 6rem;
       right: calc(100% + 6rem);
       top: 175%;
       width: calc(200% - 6rem + #{$digi-pattern-border-offset});
@@ -133,9 +141,9 @@ $digi-pattern-border-offset-x2: 2 * $digi-pattern-border-offset;
         left: 100%;
         margin-left: 0;
         max-height: unset;
-        max-width: 30vw;
+        max-width: unset;
         top: auto;
-        width: 25rem;
+        width: calc(266% + #{$digi-pattern-border-offset-x2});
       }
 
       @include at($screen-lg) {
